// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkOrderDetails component when logged in as a contract manager should render properly with a link to cancel work order 1`] = `
<DocumentFragment>
  <div>
    <a
      class="govuk-button lbh-button false undefined"
      href="/work-orders/10000012/cancel"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 11 11"
        width="11"
      >
        <rect
          fill="white"
          height="1.94118"
          transform="rotate(-90 4.5293 11)"
          width="11"
          x="4.5293"
          y="11"
        />
        <rect
          fill="white"
          height="1.94118"
          width="11"
          y="4.52942"
        />
      </svg>
      Cancel
    </a>
    <details
      data-testid="details"
    >
      <summary
        class="govuk-button lbh-button  false undefined false"
      >
        <span
          class="govuk-visually-hidden"
        >
          Select action
        </span>
        <svg
          fill="none"
          height="9"
          viewBox="0 0 14 9"
          width="14"
        >
          <path
            d="M1 1L7 7L13 1"
            stroke="white"
            stroke-width="2"
          />
        </svg>
      </summary>
      <fieldset>
        <legend
          class="govuk-visually-hidden"
        >
          Select work order
        </legend>
        <div>
          <input
            aria-describedby="workOrderMenu-0-hint"
            checked=""
            id="workOrderMenu-0"
            name="workOrderMenu"
            type="radio"
            value="0"
          />
          <label
            class="lbh-body-s undefined"
            for="workOrderMenu-0"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 15 12"
              width="15"
            >
              <path
                d="M1 5.5L5.33333 10L14 1"
                stroke="#00664F"
                stroke-width="2"
              />
            </svg>
            Cancel
          </label>
          <p
            class="lbh-body-xs undefined"
            id="workOrderMenu-0-hint"
          >
            Cancel Work Order
          </p>
        </div>
      </fieldset>
    </details>
  </div>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 10000012
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div>
          <a
            class="govuk-button lbh-button false undefined"
            href="/work-orders/10000012/update"
          >
            <svg
              fill="none"
              height="11"
              viewBox="0 0 11 11"
              width="11"
            >
              <rect
                fill="white"
                height="1.94118"
                transform="rotate(-90 4.5293 11)"
                width="11"
                x="4.5293"
                y="11"
              />
              <rect
                fill="white"
                height="1.94118"
                width="11"
                y="4.52942"
              />
            </svg>
            Update
          </a>
          <details
            data-testid="details"
          >
            <summary
              class="govuk-button lbh-button  false undefined false"
            >
              <span
                class="govuk-visually-hidden"
              >
                Select action
              </span>
              <svg
                fill="none"
                height="9"
                viewBox="0 0 14 9"
                width="14"
              >
                <path
                  d="M1 1L7 7L13 1"
                  stroke="white"
                  stroke-width="2"
                />
              </svg>
            </summary>
            <fieldset>
              <legend
                class="govuk-visually-hidden"
              >
                Select work order
              </legend>
              <div>
                <input
                  aria-describedby="workOrderMenu-0-hint"
                  checked=""
                  id="workOrderMenu-0"
                  name="workOrderMenu"
                  type="radio"
                  value="0"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 15 12"
                    width="15"
                  >
                    <path
                      d="M1 5.5L5.33333 10L14 1"
                      stroke="#00664F"
                      stroke-width="2"
                    />
                  </svg>
                  Update
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-0-hint"
                >
                  Update Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-1-hint"
                  id="workOrderMenu-1"
                  name="workOrderMenu"
                  type="radio"
                  value="1"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-1"
                >
                  Close
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-1-hint"
                >
                  Close Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-2-hint"
                  id="workOrderMenu-2"
                  name="workOrderMenu"
                  type="radio"
                  value="2"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-2"
                >
                  Cancel
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-2-hint"
                >
                  Cancel Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-3-hint"
                  id="workOrderMenu-3"
                  name="workOrderMenu"
                  type="radio"
                  value="3"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-3"
                >
                  Print
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-3-hint"
                >
                  Print Job Ticket
                </p>
              </div>
            </fieldset>
          </details>
        </div>
      </div>
    </div>
    <p
      class="lbh-body-m"
    >
      This is an urgent repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-in-progress"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: In Progress
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              18 Jan 2021, 15:28
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 23 Jan 2021, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          >
            <a
              class="lbh-link"
              href="/work-orders/10000012/appointment/new"
            >
              Schedule appointment (non DRS)
            </a>
          </div>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderDetails component when logged in as a contract manager should render with a link to authorise a variation request when status is variation pending approval 1`] = `
<DocumentFragment>
  <div>
    <a
      class="govuk-button lbh-button false undefined"
      href="/work-orders/10000012/variation-authorisation"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 11 11"
        width="11"
      >
        <rect
          fill="white"
          height="1.94118"
          transform="rotate(-90 4.5293 11)"
          width="11"
          x="4.5293"
          y="11"
        />
        <rect
          fill="white"
          height="1.94118"
          width="11"
          y="4.52942"
        />
      </svg>
      Variation Authorisation
    </a>
    <details
      data-testid="details"
    >
      <summary
        class="govuk-button lbh-button  false undefined false"
      >
        <span
          class="govuk-visually-hidden"
        >
          Select action
        </span>
        <svg
          fill="none"
          height="9"
          viewBox="0 0 14 9"
          width="14"
        >
          <path
            d="M1 1L7 7L13 1"
            stroke="white"
            stroke-width="2"
          />
        </svg>
      </summary>
      <fieldset>
        <legend
          class="govuk-visually-hidden"
        >
          Select work order
        </legend>
        <div>
          <input
            aria-describedby="workOrderMenu-0-hint"
            checked=""
            id="workOrderMenu-0"
            name="workOrderMenu"
            type="radio"
            value="0"
          />
          <label
            class="lbh-body-s undefined"
            for="workOrderMenu-0"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 15 12"
              width="15"
            >
              <path
                d="M1 5.5L5.33333 10L14 1"
                stroke="#00664F"
                stroke-width="2"
              />
            </svg>
            Variation Authorisation
          </label>
          <p
            class="lbh-body-xs undefined"
            id="workOrderMenu-0-hint"
          >
            Authorise Work Order Variation
          </p>
        </div>
      </fieldset>
    </details>
  </div>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 10000012
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div>
          <a
            class="govuk-button lbh-button false undefined"
            href="/work-orders/10000012/update"
          >
            <svg
              fill="none"
              height="11"
              viewBox="0 0 11 11"
              width="11"
            >
              <rect
                fill="white"
                height="1.94118"
                transform="rotate(-90 4.5293 11)"
                width="11"
                x="4.5293"
                y="11"
              />
              <rect
                fill="white"
                height="1.94118"
                width="11"
                y="4.52942"
              />
            </svg>
            Update
          </a>
          <details
            data-testid="details"
          >
            <summary
              class="govuk-button lbh-button  false undefined false"
            >
              <span
                class="govuk-visually-hidden"
              >
                Select action
              </span>
              <svg
                fill="none"
                height="9"
                viewBox="0 0 14 9"
                width="14"
              >
                <path
                  d="M1 1L7 7L13 1"
                  stroke="white"
                  stroke-width="2"
                />
              </svg>
            </summary>
            <fieldset>
              <legend
                class="govuk-visually-hidden"
              >
                Select work order
              </legend>
              <div>
                <input
                  aria-describedby="workOrderMenu-0-hint"
                  checked=""
                  id="workOrderMenu-0"
                  name="workOrderMenu"
                  type="radio"
                  value="0"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 15 12"
                    width="15"
                  >
                    <path
                      d="M1 5.5L5.33333 10L14 1"
                      stroke="#00664F"
                      stroke-width="2"
                    />
                  </svg>
                  Update
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-0-hint"
                >
                  Update Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-1-hint"
                  id="workOrderMenu-1"
                  name="workOrderMenu"
                  type="radio"
                  value="1"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-1"
                >
                  Close
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-1-hint"
                >
                  Close Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-2-hint"
                  id="workOrderMenu-2"
                  name="workOrderMenu"
                  type="radio"
                  value="2"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-2"
                >
                  Variation Authorisation
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-2-hint"
                >
                  Authorise Work Order Variation
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-3-hint"
                  id="workOrderMenu-3"
                  name="workOrderMenu"
                  type="radio"
                  value="3"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-3"
                >
                  Cancel
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-3-hint"
                >
                  Cancel Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-4-hint"
                  id="workOrderMenu-4"
                  name="workOrderMenu"
                  type="radio"
                  value="4"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-4"
                >
                  Print
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-4-hint"
                >
                  Print Job Ticket
                </p>
              </div>
            </fieldset>
          </details>
        </div>
      </div>
    </div>
    <p
      class="lbh-body-m"
    >
      This is an urgent repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-variation-pending-approval"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: Variation Pending Approval
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              18 Jan 2021, 15:28
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 23 Jan 2021, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          >
            <a
              class="lbh-link"
              href="/work-orders/10000012/appointment/new"
            >
              Schedule appointment (non DRS)
            </a>
          </div>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderDetails component when logged in as a contract manager should render without a link to authorise a variation request when status is not variation pending approval 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 10000012
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div>
          <a
            class="govuk-button lbh-button false undefined"
            href="/work-orders/10000012/update"
          >
            <svg
              fill="none"
              height="11"
              viewBox="0 0 11 11"
              width="11"
            >
              <rect
                fill="white"
                height="1.94118"
                transform="rotate(-90 4.5293 11)"
                width="11"
                x="4.5293"
                y="11"
              />
              <rect
                fill="white"
                height="1.94118"
                width="11"
                y="4.52942"
              />
            </svg>
            Update
          </a>
          <details
            data-testid="details"
          >
            <summary
              class="govuk-button lbh-button  false undefined false"
            >
              <span
                class="govuk-visually-hidden"
              >
                Select action
              </span>
              <svg
                fill="none"
                height="9"
                viewBox="0 0 14 9"
                width="14"
              >
                <path
                  d="M1 1L7 7L13 1"
                  stroke="white"
                  stroke-width="2"
                />
              </svg>
            </summary>
            <fieldset>
              <legend
                class="govuk-visually-hidden"
              >
                Select work order
              </legend>
              <div>
                <input
                  aria-describedby="workOrderMenu-0-hint"
                  checked=""
                  id="workOrderMenu-0"
                  name="workOrderMenu"
                  type="radio"
                  value="0"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 15 12"
                    width="15"
                  >
                    <path
                      d="M1 5.5L5.33333 10L14 1"
                      stroke="#00664F"
                      stroke-width="2"
                    />
                  </svg>
                  Update
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-0-hint"
                >
                  Update Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-1-hint"
                  id="workOrderMenu-1"
                  name="workOrderMenu"
                  type="radio"
                  value="1"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-1"
                >
                  Close
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-1-hint"
                >
                  Close Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-2-hint"
                  id="workOrderMenu-2"
                  name="workOrderMenu"
                  type="radio"
                  value="2"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-2"
                >
                  Cancel
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-2-hint"
                >
                  Cancel Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-3-hint"
                  id="workOrderMenu-3"
                  name="workOrderMenu"
                  type="radio"
                  value="3"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-3"
                >
                  Print
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-3-hint"
                >
                  Print Job Ticket
                </p>
              </div>
            </fieldset>
          </details>
        </div>
      </div>
    </div>
    <p
      class="lbh-body-m"
    >
      This is an urgent repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-in-progress"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: In Progress
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              18 Jan 2021, 15:28
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 23 Jan 2021, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          >
            <a
              class="lbh-link"
              href="/work-orders/10000012/appointment/new"
            >
              Schedule appointment (non DRS)
            </a>
          </div>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderDetails component when logged in as a contractor should render properly with a link to update work order 1`] = `
<DocumentFragment>
  <div>
    <a
      class="govuk-button lbh-button false undefined"
      href="/work-orders/10000012/update"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 11 11"
        width="11"
      >
        <rect
          fill="white"
          height="1.94118"
          transform="rotate(-90 4.5293 11)"
          width="11"
          x="4.5293"
          y="11"
        />
        <rect
          fill="white"
          height="1.94118"
          width="11"
          y="4.52942"
        />
      </svg>
      Update
    </a>
    <details
      data-testid="details"
    >
      <summary
        class="govuk-button lbh-button  false undefined false"
      >
        <span
          class="govuk-visually-hidden"
        >
          Select action
        </span>
        <svg
          fill="none"
          height="9"
          viewBox="0 0 14 9"
          width="14"
        >
          <path
            d="M1 1L7 7L13 1"
            stroke="white"
            stroke-width="2"
          />
        </svg>
      </summary>
      <fieldset>
        <legend
          class="govuk-visually-hidden"
        >
          Select work order
        </legend>
        <div>
          <input
            aria-describedby="workOrderMenu-0-hint"
            checked=""
            id="workOrderMenu-0"
            name="workOrderMenu"
            type="radio"
            value="0"
          />
          <label
            class="lbh-body-s undefined"
            for="workOrderMenu-0"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 15 12"
              width="15"
            >
              <path
                d="M1 5.5L5.33333 10L14 1"
                stroke="#00664F"
                stroke-width="2"
              />
            </svg>
            Update
          </label>
          <p
            class="lbh-body-xs undefined"
            id="workOrderMenu-0-hint"
          >
            Update Work Order
          </p>
        </div>
      </fieldset>
    </details>
  </div>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 10000012
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div>
          <a
            class="govuk-button lbh-button false undefined"
            href="/work-orders/10000012/update"
          >
            <svg
              fill="none"
              height="11"
              viewBox="0 0 11 11"
              width="11"
            >
              <rect
                fill="white"
                height="1.94118"
                transform="rotate(-90 4.5293 11)"
                width="11"
                x="4.5293"
                y="11"
              />
              <rect
                fill="white"
                height="1.94118"
                width="11"
                y="4.52942"
              />
            </svg>
            Update
          </a>
          <details
            data-testid="details"
          >
            <summary
              class="govuk-button lbh-button  false undefined false"
            >
              <span
                class="govuk-visually-hidden"
              >
                Select action
              </span>
              <svg
                fill="none"
                height="9"
                viewBox="0 0 14 9"
                width="14"
              >
                <path
                  d="M1 1L7 7L13 1"
                  stroke="white"
                  stroke-width="2"
                />
              </svg>
            </summary>
            <fieldset>
              <legend
                class="govuk-visually-hidden"
              >
                Select work order
              </legend>
              <div>
                <input
                  aria-describedby="workOrderMenu-0-hint"
                  checked=""
                  id="workOrderMenu-0"
                  name="workOrderMenu"
                  type="radio"
                  value="0"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 15 12"
                    width="15"
                  >
                    <path
                      d="M1 5.5L5.33333 10L14 1"
                      stroke="#00664F"
                      stroke-width="2"
                    />
                  </svg>
                  Update
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-0-hint"
                >
                  Update Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-1-hint"
                  id="workOrderMenu-1"
                  name="workOrderMenu"
                  type="radio"
                  value="1"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-1"
                >
                  Close
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-1-hint"
                >
                  Close Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-2-hint"
                  id="workOrderMenu-2"
                  name="workOrderMenu"
                  type="radio"
                  value="2"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-2"
                >
                  Print
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-2-hint"
                >
                  Print Job Ticket
                </p>
              </div>
            </fieldset>
          </details>
        </div>
      </div>
    </div>
    <p
      class="lbh-body-m"
    >
      This is an urgent repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-in-progress"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: In Progress
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              18 Jan 2021, 15:28
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 23 Jan 2021, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          />
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderDetails component when logged in as an agent should not render the work order action menu if work order is closed 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 10000012
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      />
    </div>
    <p
      class="lbh-body-m"
    >
      This is an urgent repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-in-progress"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: In Progress
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              18 Jan 2021, 15:28
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 23 Jan 2021, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          >
            <a
              class="lbh-link"
              href="/work-orders/10000012/appointment/new"
            >
              Schedule appointment (non DRS)
            </a>
          </div>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs"
        >
          <span>
            <strong>
              In Progress: 22 Jan 2021, 18:15
            </strong>
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderDetails component when logged in as an agent should render migrated work order references correctly 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 00648707
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div>
          <a
            class="govuk-button lbh-button false undefined"
            href="/work-orders/648707/cancel"
          >
            <svg
              fill="none"
              height="11"
              viewBox="0 0 11 11"
              width="11"
            >
              <rect
                fill="white"
                height="1.94118"
                transform="rotate(-90 4.5293 11)"
                width="11"
                x="4.5293"
                y="11"
              />
              <rect
                fill="white"
                height="1.94118"
                width="11"
                y="4.52942"
              />
            </svg>
            Cancel
          </a>
          <details
            data-testid="details"
          >
            <summary
              class="govuk-button lbh-button  false undefined false"
            >
              <span
                class="govuk-visually-hidden"
              >
                Select action
              </span>
              <svg
                fill="none"
                height="9"
                viewBox="0 0 14 9"
                width="14"
              >
                <path
                  d="M1 1L7 7L13 1"
                  stroke="white"
                  stroke-width="2"
                />
              </svg>
            </summary>
            <fieldset>
              <legend
                class="govuk-visually-hidden"
              >
                Select work order
              </legend>
              <div>
                <input
                  aria-describedby="workOrderMenu-0-hint"
                  checked=""
                  id="workOrderMenu-0"
                  name="workOrderMenu"
                  type="radio"
                  value="0"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 15 12"
                    width="15"
                  >
                    <path
                      d="M1 5.5L5.33333 10L14 1"
                      stroke="#00664F"
                      stroke-width="2"
                    />
                  </svg>
                  Cancel
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-0-hint"
                >
                  Cancel Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-1-hint"
                  id="workOrderMenu-1"
                  name="workOrderMenu"
                  type="radio"
                  value="1"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-1"
                >
                  Print
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-1-hint"
                >
                  Print Job Ticket
                </p>
              </div>
            </fieldset>
          </details>
        </div>
      </div>
    </div>
    <p
      class="lbh-body-m"
    >
      This is a migrated repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-in-progress"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: In Progress
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              22 Feb 2014, 07:58
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 27 Feb 2014, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          >
            <a
              class="lbh-link"
              href="/work-orders/648707/appointment/new"
            >
              Schedule appointment (non DRS)
            </a>
          </div>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderDetails component when logged in as an agent should render properly with a link to cancel work order 1`] = `
<DocumentFragment>
  <div>
    <a
      class="govuk-button lbh-button false undefined"
      href="/work-orders/10000012/cancel"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 11 11"
        width="11"
      >
        <rect
          fill="white"
          height="1.94118"
          transform="rotate(-90 4.5293 11)"
          width="11"
          x="4.5293"
          y="11"
        />
        <rect
          fill="white"
          height="1.94118"
          width="11"
          y="4.52942"
        />
      </svg>
      Cancel
    </a>
    <details
      data-testid="details"
    >
      <summary
        class="govuk-button lbh-button  false undefined false"
      >
        <span
          class="govuk-visually-hidden"
        >
          Select action
        </span>
        <svg
          fill="none"
          height="9"
          viewBox="0 0 14 9"
          width="14"
        >
          <path
            d="M1 1L7 7L13 1"
            stroke="white"
            stroke-width="2"
          />
        </svg>
      </summary>
      <fieldset>
        <legend
          class="govuk-visually-hidden"
        >
          Select work order
        </legend>
        <div>
          <input
            aria-describedby="workOrderMenu-0-hint"
            checked=""
            id="workOrderMenu-0"
            name="workOrderMenu"
            type="radio"
            value="0"
          />
          <label
            class="lbh-body-s undefined"
            for="workOrderMenu-0"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 15 12"
              width="15"
            >
              <path
                d="M1 5.5L5.33333 10L14 1"
                stroke="#00664F"
                stroke-width="2"
              />
            </svg>
            Cancel
          </label>
          <p
            class="lbh-body-xs undefined"
            id="workOrderMenu-0-hint"
          >
            Cancel Work Order
          </p>
        </div>
      </fieldset>
    </details>
  </div>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 10000012
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div>
          <a
            class="govuk-button lbh-button false undefined"
            href="/work-orders/10000012/cancel"
          >
            <svg
              fill="none"
              height="11"
              viewBox="0 0 11 11"
              width="11"
            >
              <rect
                fill="white"
                height="1.94118"
                transform="rotate(-90 4.5293 11)"
                width="11"
                x="4.5293"
                y="11"
              />
              <rect
                fill="white"
                height="1.94118"
                width="11"
                y="4.52942"
              />
            </svg>
            Cancel
          </a>
          <details
            data-testid="details"
          >
            <summary
              class="govuk-button lbh-button  false undefined false"
            >
              <span
                class="govuk-visually-hidden"
              >
                Select action
              </span>
              <svg
                fill="none"
                height="9"
                viewBox="0 0 14 9"
                width="14"
              >
                <path
                  d="M1 1L7 7L13 1"
                  stroke="white"
                  stroke-width="2"
                />
              </svg>
            </summary>
            <fieldset>
              <legend
                class="govuk-visually-hidden"
              >
                Select work order
              </legend>
              <div>
                <input
                  aria-describedby="workOrderMenu-0-hint"
                  checked=""
                  id="workOrderMenu-0"
                  name="workOrderMenu"
                  type="radio"
                  value="0"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 15 12"
                    width="15"
                  >
                    <path
                      d="M1 5.5L5.33333 10L14 1"
                      stroke="#00664F"
                      stroke-width="2"
                    />
                  </svg>
                  Cancel
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-0-hint"
                >
                  Cancel Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-1-hint"
                  id="workOrderMenu-1"
                  name="workOrderMenu"
                  type="radio"
                  value="1"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-1"
                >
                  Print
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-1-hint"
                >
                  Print Job Ticket
                </p>
              </div>
            </fieldset>
          </details>
        </div>
      </div>
    </div>
    <p
      class="lbh-body-m"
    >
      This is an urgent repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-in-progress"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: In Progress
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              18 Jan 2021, 15:28
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 23 Jan 2021, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          >
            <a
              class="lbh-link"
              href="/work-orders/10000012/appointment/new"
            >
              Schedule appointment (non DRS)
            </a>
          </div>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderDetails component when logged in as an authorisation manager should render properly with a link to cancel work order 1`] = `
<DocumentFragment>
  <div>
    <a
      class="govuk-button lbh-button false undefined"
      href="/work-orders/10000012/cancel"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 11 11"
        width="11"
      >
        <rect
          fill="white"
          height="1.94118"
          transform="rotate(-90 4.5293 11)"
          width="11"
          x="4.5293"
          y="11"
        />
        <rect
          fill="white"
          height="1.94118"
          width="11"
          y="4.52942"
        />
      </svg>
      Cancel
    </a>
    <details
      data-testid="details"
    >
      <summary
        class="govuk-button lbh-button  false undefined false"
      >
        <span
          class="govuk-visually-hidden"
        >
          Select action
        </span>
        <svg
          fill="none"
          height="9"
          viewBox="0 0 14 9"
          width="14"
        >
          <path
            d="M1 1L7 7L13 1"
            stroke="white"
            stroke-width="2"
          />
        </svg>
      </summary>
      <fieldset>
        <legend
          class="govuk-visually-hidden"
        >
          Select work order
        </legend>
        <div>
          <input
            aria-describedby="workOrderMenu-0-hint"
            checked=""
            id="workOrderMenu-0"
            name="workOrderMenu"
            type="radio"
            value="0"
          />
          <label
            class="lbh-body-s undefined"
            for="workOrderMenu-0"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 15 12"
              width="15"
            >
              <path
                d="M1 5.5L5.33333 10L14 1"
                stroke="#00664F"
                stroke-width="2"
              />
            </svg>
            Cancel
          </label>
          <p
            class="lbh-body-xs undefined"
            id="workOrderMenu-0-hint"
          >
            Cancel Work Order
          </p>
        </div>
      </fieldset>
    </details>
  </div>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 10000012
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div>
          <a
            class="govuk-button lbh-button false undefined"
            href="/work-orders/10000012/cancel"
          >
            <svg
              fill="none"
              height="11"
              viewBox="0 0 11 11"
              width="11"
            >
              <rect
                fill="white"
                height="1.94118"
                transform="rotate(-90 4.5293 11)"
                width="11"
                x="4.5293"
                y="11"
              />
              <rect
                fill="white"
                height="1.94118"
                width="11"
                y="4.52942"
              />
            </svg>
            Cancel
          </a>
          <details
            data-testid="details"
          >
            <summary
              class="govuk-button lbh-button  false undefined false"
            >
              <span
                class="govuk-visually-hidden"
              >
                Select action
              </span>
              <svg
                fill="none"
                height="9"
                viewBox="0 0 14 9"
                width="14"
              >
                <path
                  d="M1 1L7 7L13 1"
                  stroke="white"
                  stroke-width="2"
                />
              </svg>
            </summary>
            <fieldset>
              <legend
                class="govuk-visually-hidden"
              >
                Select work order
              </legend>
              <div>
                <input
                  aria-describedby="workOrderMenu-0-hint"
                  checked=""
                  id="workOrderMenu-0"
                  name="workOrderMenu"
                  type="radio"
                  value="0"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 15 12"
                    width="15"
                  >
                    <path
                      d="M1 5.5L5.33333 10L14 1"
                      stroke="#00664F"
                      stroke-width="2"
                    />
                  </svg>
                  Cancel
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-0-hint"
                >
                  Cancel Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-1-hint"
                  id="workOrderMenu-1"
                  name="workOrderMenu"
                  type="radio"
                  value="1"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-1"
                >
                  Print
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-1-hint"
                >
                  Print Job Ticket
                </p>
              </div>
            </fieldset>
          </details>
        </div>
      </div>
    </div>
    <p
      class="lbh-body-m"
    >
      This is an urgent repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-in-progress"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: In Progress
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              18 Jan 2021, 15:28
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 23 Jan 2021, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          >
            <a
              class="lbh-link"
              href="/work-orders/10000012/appointment/new"
            >
              Schedule appointment (non DRS)
            </a>
          </div>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderDetails component when logged in as an authorisation manager should render with a link to authorise a new work order when status is authorisation pending approval 1`] = `
<DocumentFragment>
  <div>
    <a
      class="govuk-button lbh-button false undefined"
      href="/work-orders/10000012/authorisation"
    >
      <svg
        fill="none"
        height="11"
        viewBox="0 0 11 11"
        width="11"
      >
        <rect
          fill="white"
          height="1.94118"
          transform="rotate(-90 4.5293 11)"
          width="11"
          x="4.5293"
          y="11"
        />
        <rect
          fill="white"
          height="1.94118"
          width="11"
          y="4.52942"
        />
      </svg>
      Authorisation
    </a>
    <details
      data-testid="details"
    >
      <summary
        class="govuk-button lbh-button  false undefined false"
      >
        <span
          class="govuk-visually-hidden"
        >
          Select action
        </span>
        <svg
          fill="none"
          height="9"
          viewBox="0 0 14 9"
          width="14"
        >
          <path
            d="M1 1L7 7L13 1"
            stroke="white"
            stroke-width="2"
          />
        </svg>
      </summary>
      <fieldset>
        <legend
          class="govuk-visually-hidden"
        >
          Select work order
        </legend>
        <div>
          <input
            aria-describedby="workOrderMenu-0-hint"
            checked=""
            id="workOrderMenu-0"
            name="workOrderMenu"
            type="radio"
            value="0"
          />
          <label
            class="lbh-body-s undefined"
            for="workOrderMenu-0"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 15 12"
              width="15"
            >
              <path
                d="M1 5.5L5.33333 10L14 1"
                stroke="#00664F"
                stroke-width="2"
              />
            </svg>
            Authorisation
          </label>
          <p
            class="lbh-body-xs undefined"
            id="workOrderMenu-0-hint"
          >
            Authorise Work Order
          </p>
        </div>
      </fieldset>
    </details>
  </div>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 10000012
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div>
          <a
            class="govuk-button lbh-button false undefined"
            href="/work-orders/10000012/authorisation"
          >
            <svg
              fill="none"
              height="11"
              viewBox="0 0 11 11"
              width="11"
            >
              <rect
                fill="white"
                height="1.94118"
                transform="rotate(-90 4.5293 11)"
                width="11"
                x="4.5293"
                y="11"
              />
              <rect
                fill="white"
                height="1.94118"
                width="11"
                y="4.52942"
              />
            </svg>
            Authorisation
          </a>
          <details
            data-testid="details"
          >
            <summary
              class="govuk-button lbh-button  false undefined false"
            >
              <span
                class="govuk-visually-hidden"
              >
                Select action
              </span>
              <svg
                fill="none"
                height="9"
                viewBox="0 0 14 9"
                width="14"
              >
                <path
                  d="M1 1L7 7L13 1"
                  stroke="white"
                  stroke-width="2"
                />
              </svg>
            </summary>
            <fieldset>
              <legend
                class="govuk-visually-hidden"
              >
                Select work order
              </legend>
              <div>
                <input
                  aria-describedby="workOrderMenu-0-hint"
                  checked=""
                  id="workOrderMenu-0"
                  name="workOrderMenu"
                  type="radio"
                  value="0"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 15 12"
                    width="15"
                  >
                    <path
                      d="M1 5.5L5.33333 10L14 1"
                      stroke="#00664F"
                      stroke-width="2"
                    />
                  </svg>
                  Authorisation
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-0-hint"
                >
                  Authorise Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-1-hint"
                  id="workOrderMenu-1"
                  name="workOrderMenu"
                  type="radio"
                  value="1"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-1"
                >
                  Cancel
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-1-hint"
                >
                  Cancel Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-2-hint"
                  id="workOrderMenu-2"
                  name="workOrderMenu"
                  type="radio"
                  value="2"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-2"
                >
                  Print
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-2-hint"
                >
                  Print Job Ticket
                </p>
              </div>
            </fieldset>
          </details>
        </div>
      </div>
    </div>
    <p
      class="lbh-body-m"
    >
      This is an urgent repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-authorisation-pending-approval"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: Authorisation Pending Approval
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              18 Jan 2021, 15:28
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 23 Jan 2021, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          />
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderDetails component when logged in as an authorisation manager should render without a link to authorise a new work order when status is not authorisation pending approval 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-display-none-print"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <div
      class="govuk-grid-row undefined"
    >
      <div
        class="govuk-grid-column-two-thirds"
      >
        <h1
          class="lbh-heading-h1 display-inline govuk-!-margin-right-6"
        >
          Work order: 10000012
        </h1>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div>
          <a
            class="govuk-button lbh-button false undefined"
            href="/work-orders/10000012/cancel"
          >
            <svg
              fill="none"
              height="11"
              viewBox="0 0 11 11"
              width="11"
            >
              <rect
                fill="white"
                height="1.94118"
                transform="rotate(-90 4.5293 11)"
                width="11"
                x="4.5293"
                y="11"
              />
              <rect
                fill="white"
                height="1.94118"
                width="11"
                y="4.52942"
              />
            </svg>
            Cancel
          </a>
          <details
            data-testid="details"
          >
            <summary
              class="govuk-button lbh-button  false undefined false"
            >
              <span
                class="govuk-visually-hidden"
              >
                Select action
              </span>
              <svg
                fill="none"
                height="9"
                viewBox="0 0 14 9"
                width="14"
              >
                <path
                  d="M1 1L7 7L13 1"
                  stroke="white"
                  stroke-width="2"
                />
              </svg>
            </summary>
            <fieldset>
              <legend
                class="govuk-visually-hidden"
              >
                Select work order
              </legend>
              <div>
                <input
                  aria-describedby="workOrderMenu-0-hint"
                  checked=""
                  id="workOrderMenu-0"
                  name="workOrderMenu"
                  type="radio"
                  value="0"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 15 12"
                    width="15"
                  >
                    <path
                      d="M1 5.5L5.33333 10L14 1"
                      stroke="#00664F"
                      stroke-width="2"
                    />
                  </svg>
                  Cancel
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-0-hint"
                >
                  Cancel Work Order
                </p>
              </div>
              <div>
                <input
                  aria-describedby="workOrderMenu-1-hint"
                  id="workOrderMenu-1"
                  name="workOrderMenu"
                  type="radio"
                  value="1"
                />
                <label
                  class="lbh-body-s undefined"
                  for="workOrderMenu-1"
                >
                  Print
                </label>
                <p
                  class="lbh-body-xs undefined"
                  id="workOrderMenu-1-hint"
                >
                  Print Job Ticket
                </p>
              </div>
            </fieldset>
          </details>
        </div>
      </div>
    </div>
    <p
      class="lbh-body-m"
    >
      This is an urgent repair description
    </p>
    <ul
      class="lbh-list hackney-property-alerts"
      style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em; max-width: 30em;"
    >
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 1 
          <strong>
            (type1)
          </strong>
        </p>
      </li>
      <li
        class="bg-orange"
        style="padding: 0.5rem; overflow: hidden; border-radius: 10px;"
      >
        <p
          style="margin-top: 0px;"
        >
          Alert 2 
          <strong>
            (type2)
          </strong>
        </p>
      </li>
    </ul>
    <div
      class="lbh-body-s govuk-grid-row govuk-!-margin-bottom-6"
    >
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="property-details-main-section"
        >
          <span
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Dwelling
          </span>
          <br />
          <a
            class="lbh-link"
            href="/properties/00012345"
          >
            <div
              class="lbh-!-font-weight-bold"
            >
              16 Pitcairn House
              <br />
              St Thomass Square
              <br />
              <span
                class="govuk-!-font-size-14"
              >
                E9 6PT
              </span>
            </div>
          </a>
        </div>
        <ul
          class="lbh-list hackney-property-alerts"
          style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
        >
          <li
            class="bg-dark-green"
          >
            Tenure: Secure
          </li>
        </ul>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="work-order-info"
        >
          <div
            class="lbh-body-s govuk-!-margin-bottom-2"
          >
            <span
              class="circle-tag circle-tag--status-in-progress"
            />
            <span
              class="lbh-!-font-weight-bold"
            >
              Status: In Progress
            </span>
            <br />
            <span
              class="govuk-!-font-size-14"
            >
              Priority: U - Urgent (5 Working days)
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Raised by Dummy Agent
            </span>
            <br />
            <span>
              18 Jan 2021, 15:28
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span
              class="lbh-!-font-weight-bold"
            >
              Target: 23 Jan 2021, 18:30
            </span>
          </div>
          <div
            class="lbh-body-xs govuk-!-margin-bottom-2"
          >
            <span>
              Caller: Jill Smith
            </span>
            <br />
            <span>
              07700 900999
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-grid-column-one-third"
      >
        <div
          class="appointment-details"
        >
          <p
            class="govuk-!-font-size-16 govuk-!-margin-bottom-1"
          >
            Appointment details
          </p>
          <div
            class="lbh-body-s govuk-!-margin-0"
          >
            <a
              class="lbh-link"
              href="/work-orders/10000012/appointment/new"
            >
              Schedule appointment (non DRS)
            </a>
          </div>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          <span>
            Assigned to: Alphatrack (S) Systems Lt
          </span>
        </div>
        <div
          class="lbh-body-xs govuk-!-margin-top-1"
          style="background: rgb(247, 186, 135); padding: 2px 6px; border-radius: 6px; display: inline-block; color: rgb(72, 35, 5);"
        >
          Further work required
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
